<resources>
    <string name="app_name">Champions Aleatoria</string>
    <string name="presentacion">Simulador de eliminatorias de la Champions League de forma aleatoria.</string>
    <string name="reglas">REGLAS</string>
    <string name="balon">Clicka en el balón</string>
    <string name="comenzamos">Comenzamos…</string>
    <string name="reglas1">Escoge el número de equipos con los que deseas jugar.</string>
    <string name="reglas2">Puedes escoger:</string>
    <string name="reglas3"> 2 - Final.</string>
    <string name="reglas4"> 4 - Semi-Final.</string>
    <string name="reglas5"> 8 - Cuartos de final.</string>
    <string name="reglas6">16 - Octavos de final.</string>
    <string name="equipos">EQUIPOS</string>
    <string name="fcb">F.C.Barcelona</string>
    <string name="atleticodemadrid">Atlético de Madrid</string>
    <string name="manchestercity">Manchester City</string>
    <string name="juventus">Juventus</string>
    <string name="acmilan">A.C. Milan</string>
    <string name="ajaxamsterdam">Ajax de Amsterdam</string>
    <string name="asroma">AS Roma</string>
    <string name="bayernmunich">Bayern de Munich</string>
    <string name="chelsea">Chelsea</string>
    <string name="liverpool">Liverpool</string>
    <string name="manchesterunited">Manchester United</string>
    <string name="napoli">Napoli</string>
    <string name="psg">Paris Saint Germain</string>
    <string name="psv">PSV</string>
    <string name="realmadrid">Real Madrid</string>
    <string name="oporto">Oporto</string>
    <string name="textfinal">Final</string>
    <string name="guion">-</string>
    <string name="textSemifinal">Semi-Final</string>
    <string name="pasar_a_la_final">Pasar a la final.</string>
    <string name="semifinalista1">SemiFinalista1</string>
    <string name="semifinalista2">SemiFinalista2</string>
    <string name="semifinalista4">SemiFinalista4</string>
    <string name="semifinalista3">SemiFinalista3</string>
    <string name="escudo_semifinalista_1">Escudo semifinalista 1</string>
    <string name="escudo_semifinalista_2">Escudo semifinalista 2</string>
    <string name="escudo_semifinalista_4">Escudo semifinalista 4</string>
    <string name="escudo_semifinalista_3">Escudo semifinalista 3</string>
    <string name="escudo_finalista_1">Escudo finalista 1</string>
    <string name="finalista1">Finalista1</string>
    <string name="escudo_finalista_2">Escudo finalista 2</string>
    <string name="finalista2">Finalista2</string>
    <string name="champion">GANADOR</string>
    <string name="escudo_equipo_champion">Escudo Champion</string>
    <string name="equipo_champion">equipo_Champion</string>
    <string name="campeon">Campeon</string>
    <string name="cuartos_de_final">Cuartos de Final</string>
    <string name="escudo_cuarto_1">escudocuarto1</string>
    <string name="cuarto1">cuarto1</string>
    <string name="escudo_cuarto2">escudoCuarto2</string>
    <string name="cuarto2">cuarto2</string>
    <string name="escudo_cuarto_3">escudoCuarto3</string>
    <string name="escudo_cuarto_4">escudoCuarto4</string>
    <string name="cuarto3">cuarto3</string>
    <string name="cuarto4">cuarto4</string>


</resources>