<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/campofutbol2"
    tools:context=".Seleccion">


    <TextView
        android:id="@+id/textEquipos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:fontFamily="sans-serif"
        android:text="@string/equipos"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:columnCount="4"
        android:rowCount="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/fcb"
            android:contentDescription="@string/fcb" />
        <CheckBox
            android:id="@+id/F.C.Barcelona"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/fcb" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/atlmadrid"
            android:contentDescription="@string/atleticodemadrid"/>
        <CheckBox
            android:id="@+id/AtlMadrid"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/atleticodemadrid" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:src="@drawable/manchestercity"
            android:contentDescription="@string/manchestercity"/>
        <CheckBox
            android:id="@+id/ManchesterCity"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/manchestercity" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/juventus"
            android:contentDescription="@string/juventus" />
        <CheckBox
            android:id="@+id/Juventus"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/juventus" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/acmilan"
            android:contentDescription="@string/acmilan"/>
        <CheckBox
            android:id="@+id/ACMilan"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/acmilan" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ajaxamsterdam"
            android:contentDescription="@string/ajaxamsterdam"/>
        <CheckBox
            android:id="@+id/AjaxAmsterdam"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ajaxamsterdam" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/asroma"
            android:contentDescription="@string/asroma"/>
        <CheckBox
            android:id="@+id/ASRoma"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/asroma" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/bayernmunich"
            android:contentDescription="@string/bayernmunich"/>
        <CheckBox
            android:id="@+id/BayernMunich"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/bayernmunich" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/chelsea"
            android:contentDescription="@string/chelsea"/>
        <CheckBox
            android:id="@+id/Chelsea"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/chelsea" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/liverpool"
            android:contentDescription="@string/liverpool"/>
        <CheckBox
            android:id="@+id/Liverpool"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/liverpool" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/manchesterunited"
            android:contentDescription="@string/manchesterunited"/>
        <CheckBox
            android:id="@+id/ManchesterUnited"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/manchesterunited" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/napoli"
            android:contentDescription="@string/napoli"/>
        <CheckBox
            android:id="@+id/Napoli"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/napoli" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/psg"
            android:contentDescription="@string/psg"/>
        <CheckBox
            android:id="@+id/PSG"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/psg" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/psv"
            android:contentDescription="@string/psv"/>
        <CheckBox
            android:id="@+id/PSV"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/psv" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/realmadrid"
            android:contentDescription="@string/realmadrid"/>
        <CheckBox
            android:id="@+id/RealMadrid"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/realmadrid" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/fcporto"
            android:contentDescription="@string/oporto"/>
        <CheckBox
            android:id="@+id/Porto"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/oporto" />
    </android.widget.GridLayout>

    <TextView
        android:id="@+id/textComenzamos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:fontFamily="sans-serif"
        android:text="@string/balon"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBalon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBalon2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/balon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textContador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBalon2" />


</androidx.constraintlayout.widget.ConstraintLayout>